app/src/main/java/com/example/android_internship/ui/error/UnknownError.kt
package com.example.android_internship.ui.error

import com.example.android_internship.error.ErrorMessage

class UnknownError(override val error: Throwable?) : ErrorMessage {
}